kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  annotations:
    kubernetes.io/ingress.class: "nginx" # kopplar vår ingress till den installerade nginx-ingress
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls: # sätter att vi ska bara acceptera https trafik till er domän
    - hosts:
        - mbweb.tech
      secretName: demo-tls # det kommer senare skapas en secret med detta namnet som innehåller certificatet för vårt domännamn.
  rules:
    - host: mbweb.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 80
